# printer-ws-client

./: .gitignore  PAD.md  README.md  TODO.md  config.json  current_session.py  install_dependencies.sh  mkdocs.yml  multiconnect_test.py  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test3.py  virtual_printer.py  virtual_super_client.py
.github/workflows/: docs.yml  lint-ci.yml  python-publish.yml  test-ci.yml
docs/: index.md  setup.md  tutorial.md
example/: __main__.py  tutorial_client.py  virtual_client.py
examples/: virtual_client.py
printer_ws_client/: __init__.py  ambient.py  async_loop.py  client.py  connection.py  event.py  file.py  printer_state.py  timer.py  webcam.py
simplyprint-ws-client/: ambient.py  timer.py
simplyprint_ws/: client.py  config.py  const.py  multiplexer.py  printer.py  state.py  websocket.py
simplyprint_ws/client/: client.py  info.py  machine.py  sentry.py
simplyprint_ws/events/: __init__.py  client_events.py  demands.py  events.py
simplyprint_ws/helpers/: ambient_check.py  file_download.py  filemanager.py  temperature.py  timer.py
simplyprint_ws_client/: __init__.py  __main__.py  _polyfill.py  app.py  cli.py  client.py  config.py  connection.py  const.py  event.py  file.py  main.py  models.py  multiplexer.py  printer.py  state.py  timer.py  websocket.py
simplyprint_ws_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simplyprint_ws_client/client/: __init__.py  app.py  cache.py  client.py  factory.py  options.py  provider.py
simplyprint_ws_client/client/config/: __init__.py  config.py  json.py  manager.py  memory.py  sqlite.py
simplyprint_ws_client/client/instance/: __init__.py  instance.py  (+2 more)
simplyprint_ws_client/client_old/: __init__.py  async_loop.py  client.py  info.py  webcam.py
simplyprint_ws_client/config/: __init__.py  config.py  json.py  manager.py  memory.py  sqlite.py  sqlite3.py
simplyprint_ws_client/connection/: connection.py
simplyprint_ws_client/core/: __init__.py  _event_instrumentation.py  app.py  autowire.py  client.py  client_connection_manager.py  client_list.py  client_view.py  connection_manager.py  scheduler.py  settings.py
simplyprint_ws_client/events/: __init__.py  client_events.py  demand_events.py  demands.py  emitter.py  event.py  event_bus.py  event_bus_listeners.py  event_bus_middleware.py  event_bus_predicate_bucket.py  event_bus_predicate_tree.py  event_bus_worker.py  event_listeners.py  events.py  server_events.py
simplyprint_ws_client/examples/: __main__.py  virtual_client.py
simplyprint_ws_client/helpers/: ambient_check.py  file_backup.py  file_download.py  file_manager.py  intervals.py  physical_machine.py  runner.py  sentry.py  simplyprint_api.py  stoppable.py  temperature.py  url_builder.py
simplyprint_ws_client/instance/: __init__.py  instance.py  lifetime.py  multi_printer.py  single_printer.py
simplyprint_ws_client/logging/: client_handler.py  client_logger.py  client_name.py
simplyprint_ws_client/multiconnection/: __init__.py  connection.py  fake_ws.py  multiconnection.py
simplyprint_ws_client/state/: __init__.py  always.py  models.py  printer.py  root_state.py  state.py  to_event.py
simplyprint_ws_client/utils/: _exception_as_value.py  async_task_scope.py  bounded_variable.py  cancelable_lock.py  debug_hooks.py  event_loop_provider.py  event_loop_runner.py  exception_as_value.py  issue_118950_patch.py  physical_machine.py  predicate.py  property_path.py  stoppable.py  traceability.py
state_effect/: graph.py  property_path.py  value.py  version.py
state_effect/hooks/: attrs.py  base.py  dataclasses.py  default.py  hook.py  pydantic.py  traitlets.py
state_effect/sketch/: property_path_benchmark.py  sketch.py  test.py  test2.py
state_effect/tests/: test_property_path.py  test_version.py
tests/: conftest.py  test.py  test2.py  test4.py  test_active_tool.py  test_ambient_temperature.py  test_autowire.py  test_client_app.py  test_client_logging.py  test_config.py  test_config_manager.py  test_connectivity_report.py  test_event_bus.py  test_event_bus_predicate_response.py  test_file_manager.py  test_file_progress_state.py  test_gcode_parser.py  test_intervals.py  test_job_info.py  test_job_info_event.py  test_job_info_state.py  test_material_data.py  test_message_order.py  test_notification_events.py  test_predicate.py  test_property_path.py  test_state_list_resize.py  test_stoppable.py  test_temperature.py  test_temperature_event.py  test_traceability.py  test_url_builder.py  test_urls.py
(+73 files in other folders)
