[tool.poetry]
name = "simplyprint-ws-client"
version = "1.0.1rc7"
license = "AGPL-3.0-or-later"
authors = ["SimplyPrint <contact@simplyprint.io>"]
description = "SimplyPrint Websocket Client"
homepage = "https://simplyprint.io"
repository = "https://github.com/SimplyPrint/printer-ws-client"
keywords = ["simplyprint", "websocket", "client"]
readme = "README.md"

packages = [
    { include = "simplyprint_ws_client" },
]

[tool.poetry.dependencies]
click = "^8.1.7"
psutil = "^6.0.0"
python = "^3.8"
netifaces = "^0.11.0"
sentry-sdk = "^2.19.2"
platformdirs = "^4.3.6"
pydantic = ">2.7"
typing-extensions = "*"

aiohttp = [
    # Python 3.8 support dropped in 3.11.0
    { version = "^3.11.11", python = ">=3.9" },
    { version = "^3.10.11", python = "<3.9" }
]

yarl = [
    # Python 3.8 support dropped in 1.15.3
    { version = "^1.18.3", python = ">=3.9" },
    { version = "^1.15.2", python = "<3.9" },
]

# Install async_timeout for python < 3.11
async-timeout = { version = "*", python = "<3.11" }

# Install strenum for python < 3.11
strenum = { version = "*", python = "<3.11" }

[tool.poetry.dev-dependencies]
unittest = "*"
pylint = "*"

[tool.poetry.extras]
uvloop = ["uvloop"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/SimplyPrint/printer-ws-client/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
