[project]
name = "simplyprint-ws-client"
version = "1.0.1rc18"
description = "SimplyPrint Websocket Client"
authors = [{ name = "SimplyPrint", email = "contact@simplyprint.io" }]
requires-python = "~=3.8"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [
    "simplyprint",
    "websocket",
    "client",
]
dependencies = [
    "click>=8.1.7,<9",
    "psutil>=6.0.0,<7",
    "netifaces>=0.11.0,<0.12",
    "sentry-sdk>=2.19.2,<3",
    "platformdirs>=4.3.6,<5",
    "pydantic>2.7",
    "typing-extensions",
    "aiohttp>=3.11.12,<4 ; python_version >= '3.9'",
    "aiohttp>=3.10.11,<4 ; python_version < '3.9'",
    "yarl>=1.18.3,<2 ; python_version >= '3.9'",
    "yarl>=1.15.2,<2 ; python_version < '3.9'",
    "async-timeout ; python_version < '3.11'",
    "strenum ; python_version < '3.11'",
]

[project.optional-dependencies]
uvloop = []

[project.urls]
Homepage = "https://simplyprint.io"
Repository = "https://github.com/SimplyPrint/printer-ws-client"
"Bug Tracker" = "https://github.com/SimplyPrint/printer-ws-client/issues"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "pylint",
]

[tool.hatch.build.targets.sdist]
include = ["simplyprint_ws_client"]

[tool.hatch.build.targets.wheel]
include = ["simplyprint_ws_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
