[project]
name = "simplyprint-ws-client"
version = "1.0.1rc31"
description = "SimplyPrint Websocket Client"
authors = [{ name = "SimplyPrint", email = "contact@simplyprint.io" }]
requires-python = ">=3.8"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [
    "simplyprint",
    "websocket",
    "client",
]
dependencies = [
    "psutil>=6.0.0,<7",
    "netifaces-plus==0.12.4",
    "sentry-sdk>=2.35.1,<3",
    "platformdirs>=4.4.0,<5 ; python_version >= '3.9'",
    "platformdirs==4.3.6 ; python_version < '3.9'",
    "click>=8.2.1,<9 ; python_version >= '3.10'",
    "click==8.1.8 ; python_version < '3.10'",
    "pydantic>=2.11.7 ; python_version >= '3.9'",
    "pydantic>=2.10 ; python_version < '3.9'",
    "aiohttp>=3.12.15,<4 ; python_version >= '3.9'",
    "aiohttp==3.10.11 ; python_version < '3.9'",
    "yarl>=1.18.3,<2 ; python_version >= '3.9'",
    "yarl==1.15.2 ; python_version < '3.9'",
    "async-timeout ; python_version < '3.11'",
    "strenum ; python_version < '3.11'",
    "typing-extensions",
]

[project.optional-dependencies]
uvloop = []

[project.urls]
Homepage = "https://simplyprint.io"
Repository = "https://github.com/SimplyPrint/printer-ws-client"
"Bug Tracker" = "https://github.com/SimplyPrint/printer-ws-client/issues"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "pylint",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.sdist]
include = ["simplyprint_ws_client"]

[tool.hatch.build.targets.wheel]
include = ["simplyprint_ws_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
